--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -42,10 +42,10 @@
     
     <!-- Original concept borrowed from Marco Dell'Anna in a CodePen titled ALIEN - Deviation of microcosm, source: https://codepen.io/plasm/pen/JNPXxg  -->
 
-    <center><img width="15%" src="{% static 'img/compass1-black-with-blur4.png' %}"></center>
+    <!-- <center><img width="15%" src="{% static 'img/compass1-black-with-blur4.png' %}"></center> -->
 
-    <!-- <h1 Tarot</h1> -->
-    <h1>GLOBAL <br> INITIATION</h1>
+    <h1> Tarot</h1> 
+    <!-- <h1>GLOBAL <br> INITIATION</h1>-->
     <!-- <h1>TAROT</h1> --?>
     <!-- To F/LOSS/GG:  -->
     <h3><a href="{% url 'slashdot' %}">@ SLASHDOT</a></h3> 
