--- a/templates/landings/gateway.html
+++ b/templates/landings/gateway.html
@@ -38,7 +38,7 @@
 
     <hr>
 
-    {% if nuclear %}
+    {% if not nuclear %}
 
     <div id="passphrase">
       <form action="{% url 'index' %}" method="POST">
