--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -46,7 +46,7 @@
 
     <h1> Tarot</h1> 
     <!-- <h1>GLOBAL <br> INITIATION</h1>-->
-    <!-- <h1>TAROT</h1> --?>
+    <!-- <h1>TAROT</h1> -->
     <!-- To F/LOSS/GG:  -->
     <h3><a href="{% url 'slashdot' %}">@ SLASHDOT</a></h3> 
    
