--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -44,7 +44,7 @@
 
     <!-- <center><img width="15%" src="{% static 'img/compass1-black-with-blur4.png' %}"></center> -->
 
-    <h1> Tarot</h1> 
+    <h1>TAROT</h1> 
     <!-- <h1>GLOBAL <br> INITIATION</h1>-->
     <!-- <h1>TAROT</h1> --?>
     <!-- To F/LOSS/GG:  -->
