Add `bibliography` id to h1 element

--- a/templates/essays/all_content_dump.html
+++ b/templates/essays/all_content_dump.html
@@ -78,7 +78,7 @@
             {% endfor %}
 
 
-            <h1>Bibliography (Essays)</h1>
+            <h1 id="bibliography">Bibliography (Essays)</h1>
             {% for biblio_article in biblio_articles %}
                   <p>{{ biblio_article.biblio|safe }}</p>
             {% endfor %}
