Move tarot key images over to the right and wrap text

--- a/templates/essays/all_content_dump.html
+++ b/templates/essays/all_content_dump.html
@@ -20,6 +20,25 @@
             margin-bottom: 0px;
             margin-left: 0px;
           }
+          .tarot-small-key {
+            padding: 10px;
+            border: 0pt none;
+            float: left;
+            padding: 20px;
+            width: 250px;
+            height: 423px;
+            clear: both;
+            display: block;
+            }
+            .right {
+  border: 0pt none;
+  /*padding-left: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;*/
+  float: right;
+  margin-bottom: 0.5em;
+}
+
       </style>
 </head>
 <body>
