--- a/templates/essays/slashdot.html
+++ b/templates/essays/slashdot.html
@@ -11,16 +11,22 @@
   <div class="essay">
   {% if slashdot_obj %}
         <div><h1>{{ slashdot_obj.title }}</h1></div>
+        <div class="essay-meta-data">
+          <h6>First Posted: {{ slashdot_obj.date_first_posted }} GMT</h6>
+          <h6>Last Updated: {{ slashdot_obj.date_changed }} GMT</h6>
+          <h6>Author: {{ slashdot_obj.authors }}</h6>
+          <h6><a href="{% url 'content_changelog' %}">Changelog here.</a></h6>
+        </div>
         <p> {{ slashdot_obj.introduction|safe }} </p>
         <br>
           {% for generator in generators %}
-              <h2>Tarot Key {{ generator.number }}: {{ generator.title }}</h2>
-              <p>{{ generator.description|safe }}</p>
-                <img class="tarot-small-key right" src="{{ generator.tarot_card_image }}" width="180"/>
-                <h3>The Galilean narrative:</h3>
-              <p>{{ generator.galileo_content|safe }}</p>
-                <h3>The FLOSS narrative:</h3>
-              <p>{{ generator.f_loss_content|safe }}</p>
+          <h2>Tarot Key {{ generator.number }}: {{ generator.title }}</h2>
+          <img class="tarot-small-key right" src="{{ generator.tarot_card_image }}" width="180"/>
+          <p>{{ generator.description|safe }}</p>
+              <h3>The Galilean narrative:</h3>
+            <p>{{ generator.galileo_content|safe }}</p>
+              <h3>The FLOSS narrative:</h3>
+            <p>{{ generator.f_loss_content|safe }}</p>
             
           {% endfor %}
         <br>
@@ -28,6 +34,21 @@
         <p>{{ slashdot_obj.conclusion|safe }} </p>
         <br>
   {% endif %}
+  {% if biblio_objs %}
+
+  {% for biblio_obj in biblio_objs %}    
+
+      <h4> {{ biblio_obj.title }}</h4>
+      <ul class="biblio">
+          {% for point in biblio_obj.biblio_into_bullets %}
+              <li class="biblio">{{point|safe}}</li>
+         
+          {% endfor %}
+      </ul>
+
+  {% endfor %}
+
+{% endif %}
 </div> <!-- end essay -->
 </article>
 {% endblock %}
