Added permanent date first posted timestamp

--- a/templates/essays/slashdot.html
+++ b/templates/essays/slashdot.html
@@ -12,7 +12,7 @@
   {% if slashdot_obj %}
         <div><h1>{{ slashdot_obj.title }}</h1></div>
         <div class="essay-meta-data">
-          <h6>First Posted: {{ slashdot_obj.date_first_posted }} GMT</h6>
+          <h6>First Posted: March 20, 2021 11:12 a.m. GMT</h6>
           <h6>Last Updated: {{ slashdot_obj.date_changed }} GMT</h6>
           <h6>Author: {{ slashdot_obj.authors }}</h6>
           <h6><a href="{% url 'content_changelog' %}">Changelog here.</a></h6>
