--- a/templates/essays/watchtower.html
+++ b/templates/essays/watchtower.html
@@ -12,7 +12,7 @@
   {% if watchtower_obj %}
         <div><h1>{{ watchtower_obj.title }}</h1></div>
         <div class="essay-meta-data">
-          <h6>First Posted: {{ watchtower_obj.date_first_posted }} GMT</h6>
+          <h6>First Posted: March 20, 2021 11:44 a.m. GMT</h6>
           <h6>Last Updated: {{ watchtower_obj.date_changed }} GMT</h6>
           <h6>Author: {{ watchtower_obj.authors }}</h6>
           <h6><a href="{% url 'content_changelog' %}">Changelog here.</a></h6>
