--- a/templates/landings/essay_list.html
+++ b/templates/landings/essay_list.html
@@ -5,23 +5,28 @@
   <link rel="stylesheet" href="{% static 'css/essay-main.css' %}">
 {% endblock %}
 
+<style>
+   ul {
+      list-style: circle;
+      list-style-type: disc;
+      margin-block-start: 1em;
+      margin-block-end: 1em;
+      margin-inline-start: 0px;
+      margin-inline-end: 0px;
+      padding-inline-start: 40px;
+   }
+   </style>
+
 {% block content %}    
 
 <article class="article">
 <div class="essay">   
-   <style>
-      ul {
-         list-style: circle;
-         list-style-type: disc;
-         margin-block-start: 1em;
-         margin-block-end: 1em;
-         margin-inline-start: 0px;
-         margin-inline-end: 0px;
-         padding-inline-start: 40px;
-      }
-      </style>
+
 {% if essay_lists %}
    {% for essay_list in essay_lists %}    
+   <h1> {{ essay_list.title }} </h1>
+   <br>
+   <br>
       <p class="text-justify"> {{ essay_list.text_content|safe }} </p>
    {% endfor %}
 {% endif %}
