--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,24 @@
 </head>
 
 <body>
+  {% if messages %} {% for message in messages %} {% if forloop.first %}
 
+  <div id="message" class="container">
+    <div
+      class="alert alert-{{ message.tags }} alert-dismissible text-center"
+      role="alert"
+    >
+      <!-- <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span></button> -->
+      <strong>
+        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %} Error: {% else %}
+        {{ message.tags|title }} {% endif %}
+      </strong>
+      {{ message }}
+    </div>
+  </div>
+  
+  {% endif %} {% endfor %} {% endif %}
+  
   <!-- Top Bar -->
   {% include 'partials/_topbar.html' %}
 
