--- a/tarot_juicer/static/css/portal.css
+++ b/tarot_juicer/static/css/portal.css
@@ -72,7 +72,7 @@ canvas {
   position: relative;
   color: none;
   font-weight: 600;
-  font-size: 60px;
+  font-size: 53px;
   padding-top: 0px;
   padding-bottom: 0px;
   margin: 0;
@@ -173,6 +173,7 @@ hr {
   width: 100px;
   margin-bottom: 50px;
   margin-top: 50px;
+  background: white;
 }
 
 #def {
@@ -196,10 +197,10 @@ hr {
   /* Put your CSS here for 768px to 1024px width devices(covers all iPad portrait width */
 
   img {
-    width: 21%;
+    width: 350px;
   }
   #pent {
-    width: 5%;
+    width: 10%;
   }
   .title {
     top: 25%;
@@ -210,11 +211,11 @@ hr {
   /* Put your CSS here for 200px to 767px width devices (cover all mobile portrait width */
 
   img {
-    width: 33%;
+    width: 333px;
   }
 
   #pent {
-    width: 11%;
+    width: 120px;
   }
   .title {
     top: 25%;
@@ -371,3 +372,9 @@ transform: rotate(360deg);
     display: block !important;
     opacity: 1 !important;
   }
+
+  a {
+     color: black; 
+    text-decoration: none; 
+    background-color: transparent; 
+}
