Tuning changelog CSS margins and positiong at diff resolutions

--- a/templates/essays/content_changelog.html
+++ b/templates/essays/content_changelog.html
@@ -13,10 +13,10 @@
 <style>
 
     body {
-      width: 800px;
-      margin: 0 auto;
-
+      width: 60%;
+      margin: auto;
     }
+    
     h2 {
       margin: 50px auto;
       text-align: center;
@@ -24,12 +24,15 @@
 
     h5 {
       font-size: 2em;
-      margin-top: 50px auto;
+      margin: 50px auto;
       text-align: center;
     }
 
     article {
-      padding: 35px;
+      padding: 0px;
+      overflow-wrap: break-word;
+      max-width:100%;
+      margin: auto;
     }
 
     .strike {
