Static file cleanup, placed inside 'emeritus' dir

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -60,30 +60,16 @@
 
     <!-- Original concept borrowed from Marco Dell'Anna in a CodePen titled ALIEN - Deviation of microcosm, source: https://codepen.io/plasm/pen/JNPXxg  -->
 
-    <center><img width="15%" src="{% static 'img/compass1-black-with-blur4.png' %}"></center>
+    <center><img width="15%" src="{% static 'img/compass.png' %}"></center>
 
     <!--<h1>TAROT</h1>  -->
     <h1>GLOBAL <br> INITIATION</h1>
-    <!-- <h1>TAROT</h1> -->
+    
     <!-- To F/LOSS/GG:  -->
     <h3><a href="{% url 'slashdot' %}">@ SLASHDOT</a></h3>
 
-    <!-- To Forrest Gump article:  -->
-    <!-- <h3>
-      <div class="tooltip">
-        <a href="https://tarot-prod.herokuapp.com/article/tarot-and-forrest-gump/">@ FILM (Heroku, prod)</a> 
-      </div>
-    </h3> 
-    <h3>
-      <div class="tooltip">
-        <a href="https://tarot-test.herokuapp.com/article/Forrest_Gump/">@ FILM (Heroku, testing)</a> 
-      </div>
-    </h3> 
-    <h3>
-      <div class="tooltip">
-        <a href="http://127.0.0.1:8000/article/Forrest_Gump/">@ FILM (local)</a> 
-      </div>
-    </h3> -->
+    <!-- To Forrest Gump, Wizard of Oz article:  -->
+
     <h3>
        <a href="#">@ HOLLYWOOD</a>
     </h3>
