Replace input type from `text` to `password`

--- a/templates/landings/gateway.html
+++ b/templates/landings/gateway.html
@@ -60,7 +60,7 @@
         <label for="passphrase">Enter Your Pass Phrase:</label>
         <br>
 
-        <input type="text" name="passphrase" class="form-control" required>
+        <input type="password" name="passphrase" class="form-control" required>
       </div>
       <input class="submit" type="submit" value="Submit" class="btn btn-secondary btn-block">
 
