--- a/templates/404.html
+++ b/templates/404.html
@@ -1,1 +1,17 @@
-<h1>404: Page does not exist</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8" name=viewport content="width=device-width, initial-scale=1">
+  <title>404</title>
+  <style>
+   body {
+    background-image: url("https://d33wubrfki0l68.cloudfront.net/e585f81a0b18723a6972cf293e97585f47303d0e/6ae49/images/404.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+   }
+  </style>
+</head>
+<body>
+</body>
+</html>
