Refactor bibliography into hyperlink instead of in body

--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -139,7 +139,9 @@
             </div> <!-- end  st-paul-content -->
         </div>    
         </section>
-
+        <h1></h1>
+        <center><a id="biblio-key"href="{% url 'bibliography' %}"> Site Wide Bibliography</a></center>
+            
       </div> <!-- end wrapper star -->
   {% endif %} 
 {% endblock %}
