Update Tarot Key
- [x]

> Comment out Regular/Study

--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -76,14 +76,19 @@
             <li>Letter Meaning: {{ generator.letter_meaning }}</li>
           </ul>
 
-          <ul class="esoteric-attributes"> 
+          <!-- CONTENT COMMENT FOR LATER USE IN ISSUE-#141 -->
+
+          <!-- <ul class="esoteric-attributes"> 
             <li> <strong>Mode</strong>: 
             <button class="regular-btn btn-xs btn-danger">Regular</button> or <button  class="study-btn btn-xs btn-danger">Study</button>
             </li>
-          </ul>
+          </ul> -->
+
+          <!-- CONTENT COMMENT FOR LATER USE IN ISSUE-#141 -->
 
         </section>  <!-- end general -->
-        <h1>Card meaning:</h1>
+
+          <h1>Card meaning:</h1>
           <p class="content animated rubberBand">{{ generator.description|safe }} </p>
           
           <ul class="bullets">
