--- a/templates/500.html
+++ b/templates/500.html
@@ -1,1 +1,43 @@
-<h1>500: Server error</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8" name=viewport content="width=device-width, initial-scale=1">
+  <title>500</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+  <style>
+   body {
+    background-image: url("https://d33wubrfki0l68.cloudfront.net/e585f81a0b18723a6972cf293e97585f47303d0e/6ae49/images/404.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: 50% 75%;
+    /*width: 60%;
+    margin: auto;*/
+   }
+
+   article {
+      padding: 0px;
+      overflow-wrap: break-word;
+      max-width:100%;
+      margin: auto;
+      font-size: 133%;
+      margin: 60px auto;
+      padding-left: 50px;
+      padding-right: 50px;
+      text-align: center;
+      color:crimson;
+      font-family: 'Roboto Slab', serif;
+      letter-spacing: 1px;
+      text-shadow: 0 0 1px black, 0 0 2px black;/* 0 0 5px black, 0 0 10px black;*/
+    }
+    
+  </style>
+</head>
+<body>
+    <article>
+        <h1>Error 500:</h1>
+        <p>Yikes! Looks like some knuckle head 'borked' the server. Hopefully this will be fixed soon. We are miracle workers, afterall.</p>
+    </article>
+</body>
+</html>
