--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -71,20 +71,21 @@
     <!-- To Forrest Gump, Wizard of Oz article:  -->
 
     <h3>
-       <a href="#">@ HOLLYWOOD</a>
+       <a href="{% url 'article' 'run_forrest_run' %}">@ HOLLYWOOD</a>
     </h3>
 
     <!-- To St Paul:  -->
     <h3><a href="{% url 'watchtower' %}">@ THE WATCHTOWER</a></h3>
 
-    <!-- Special article:  
-    <h3>
-      <div class="tooltip">
-        <a href="#">@ AMERIKA</a>
-        <span class="tooltiptext">Pending</span>
-      </div>
-    </h3> -->
-
+    <!-- Special article:  -->
+    <h3>      
+        <a href="{% url 'article' 'amerika' %}">@ AMERIKA</a>
+    </h3> 
+    
+    <h3>      
+        <a href="{% url 'article' 'stewart_mortenson_runyon' %}">@ MISC</a>
+    </h3>      
+    
     <hr>
 
     <h3><a href="{% url 'essay_list' %}">Complete essay list</a></h3>
