Add <hr> with tweaks

--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -140,7 +140,8 @@
         </div>    
         </section>
         <h1></h1>
-        <center><a id="biblio-key"href="{% url 'bibliography' %}"> Site Wide Bibliography</a></center>
+        <hr>
+        <center><a id="biblio-key"href="{% url 'bibliography' %}"> Site-wide Bibliography Here </a></center>
             
       </div> <!-- end wrapper star -->
   {% endif %} 
