--- a/templates/essays/all_content_dump.html
+++ b/templates/essays/all_content_dump.html
@@ -43,16 +43,86 @@
     border: 0pt none;
     float: right;
     padding: 20px;
-    width: 60%;
+    width: 20%;
     clear: both;
     display: block;}
     
+    h2 {
+  margin: 50px auto;
+  text-align: center;
+  margin: auto;
+}
+
+h5 {
+  font-size: 2em;
+  margin-top: 50px auto;
+  text-align: center;
+}
+
+article {
+      padding: 100px;
+      overflow-wrap: break-word;
+      max-width:100%;
+      margin: auto;
+    }
+
+
+.strike {
+  text-decoration: line-through dotted red;
+}
+
+.done {
+  text-decoration: line-through dotted red;
+}
+
+ul {
+  margin-left: -50px;
+}
+li {
+  line-height: 150%;
+}
+
+.emphasis {
+  font-size: 175%;
+}
+
+ul {
+  list-style-type: none;
+  line-height: 2em;
+}
+
+ul.biblio {
+  list-style-type: none;
+  line-height: 1.5em;
+  text-indent: -15px;
+}
+
+li.biblio {
+  padding: 15px;
+}
+.rose-croix {
+  /*    height: 25%;
+      width: 25%;*/
+  /*margin: auto;*/
+
+  padding: 10px;
+  border: 0pt none;
+  float: right;
+  padding: 20px;
+  /*height: 18em;*/
+  width: 64%;
+  /*width: 250px;
+      height: 423px;*/
+  clear: both;
+  display: block;
+}
+
       </style>
 </head>
 <body>
 {% block content %}
 
-      <div class="container">
+      <article>
       {% if abouts %}
             {% for about in abouts %}    
             <h1> {{ about.title }} </h1>
@@ -145,7 +215,7 @@
       
             {% endif %}
 
-      </div>
+      </article>
 
 <script>
 if(window.location.pathname.split('/')[2] === ""){
