Replace 'annnotated essay list' with 'how to'

--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -57,7 +57,7 @@
               class="nav-item mr-md-3 mx-sm-auto align-self-center"
             {% endif %}
             >
-            <a class="nav-link" href="{% url 'essay_list' %}">Annotated <br> Essay List</a>
+            <a class="nav-link" href="{% url 'essay_list' %}">How To</a>
           </li>
     
           <li class="nav-item custom-nav-button d-lg-none d-md-none d-sm-block">
