Correct bibliography tag + replace 'narrative' with 'subect matter'

--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -97,7 +97,7 @@
               {% endfor %}
           </ul> 
 
-        <h1>Select your narrative:</h1>
+        <h1>Select your subject matter:</h1>
 
         <ul class="flex-container">
 
@@ -146,7 +146,7 @@
         </section>
         <h1></h1>
         <hr>
-        <center><a id="biblio-key"href="{% url 'bibliography' %}"> Site-wide Bibliography Here </a></center>
+        <center><a id="biblio-key"href="{% url 'bibliography' %}">Site-wide Bibliography </a></center>
 
       </div> <!-- end wrapper star -->
   {% endif %} 
