Updated the issue
- [x] Removed the bug from issue

> Brother, now I tested the issue properly and fixed it.

Thank you

--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -120,31 +120,31 @@
             <div id="galileo-content" class="narrative-h1s"> 
                 <h1 class="narrative-h1s animated fadeInRightBig">Galileo</h1>
                 <p class="content animated fadeInRightBig"> {{ generator.galileo_content|safe }} </p>
-                <ul class="bullets animated fadeInRightBig">
+                <!-- <ul class="bullets animated fadeInRightBig">
                 {% for point in generator.galileo_to_bullet %}
                     <li>{{point}}</li>
                 {% endfor %}
-                </ul>  
+                </ul>   -->
             </div><!-- end  galileo-content -->
                 
             <div id="f-loss-content"> 
                 <h1 class="narrative-h1s animated fadeInRightBig">F/LOSS</h1>
                 <p class="content animated fadeInRightBig">{{ generator.f_loss_content|safe }}</p>
-                <ul class="bullets animated fadeInRightBig">
+                <!-- <ul class="bullets animated fadeInRightBig">
                 {% for point in generator.f_loss_to_bullet %}
                     <li>{{point}}</li>
                 {% endfor %}
-                </ul> 
+                </ul>  -->
             </div> <!-- end  f-loss-content -->
 
             <div id="st-paul-content"> 
                 <h1 class="narrative-h1s animated fadeInRightBig">St. Paul</h1>
                 <p class="content animated fadeInRightBig">{{ generator.st_paul_content|safe }}</p>        
-                <ul class="bullets animated fadeInRightBig">
+                <!-- <ul class="bullets animated fadeInRightBig">
                 {% for point in generator.paul_to_bullet %}
                     <li>{{point}}</li>
                 {% endfor %}
-                </ul>        
+                </ul>         -->
             </div> <!-- end  st-paul-content -->
         </div>    
         </section>
