Add ::selection property with crimson attribute

--- a/tarot_juicer/static/css/style.css
+++ b/tarot_juicer/static/css/style.css
@@ -1,3 +1,7 @@
+::selection {
+  background-color: crimson;
+}
+
 body {
   background: linear-gradient(-90deg, #6c6c6c 0%, black 100%);
   background-attachment: fixed;
