--- a/tarot_juicer/static/css/portal.css
+++ b/tarot_juicer/static/css/portal.css
@@ -1,3 +1,7 @@
+::selection {
+  background-color: crimson;
+}
+
 @import url("https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600");
 .more-pens {
   position: fixed;
