Adjust figcaption color and size

--- a/tarot_juicer/static/css/essay-main.css
+++ b/tarot_juicer/static/css/essay-main.css
@@ -1062,8 +1062,9 @@ figcaption {
   margin-top: 8px;
   text-align: center;
   font-style: italic;
-  font-size: 14px;
+  font-size: 20px;
   orphans: 2;
+  color: crimson;
 }
 
 /** End video embeds **/
