--- a/tarot_juicer/static/css/essay-main.css
+++ b/tarot_juicer/static/css/essay-main.css
@@ -157,7 +157,7 @@ h4 {
 .reference {
   display: block;
   font-size: 0.875em;
-  /* margin-right: 3cm;*/
+  margin-right: 3cm;
   margin: auto;
   text-align: center;
   margin-right: 2em;
@@ -166,6 +166,7 @@ h4 {
   color: white;
   box-shadow: 1px 2px 3px black;
   width: fit-content;
+  width: -moz-fit-content;
   margin-top: 15px;
   margin-bottom: 20px;
 }
